// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewTable::Header default view displays 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="title mr-2 h-100 cursor-pointer"
        color="transparent"
        id="settings-view-button"
        onClick={[Function]}
      >
        <Memo(ViewName)
          viewName="New & Open Tickets"
        />
        <i
          className="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      className="d-flex"
    >
      <Search
        autoFocus={false}
        bindKey={true}
        className="headerSearch mr-2"
        disabled={false}
        forcedQuery=""
        location="7"
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={0}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header default view get search query from active view 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="title mr-2 h-100 cursor-pointer"
        color="transparent"
        id="settings-view-button"
        onClick={[Function]}
      >
        <Memo(ViewName)
          viewName="New & Open Tickets"
        />
        <i
          className="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      className="d-flex"
    >
      <Search
        autoFocus={false}
        bindKey={true}
        className="headerSearch mr-2"
        disabled={false}
        forcedQuery="term1"
        location="7"
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={0}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should not render emoji if decoration is not an object 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="titleWrapper"
      >
        <EditableTitle
          className="title withEmojiPicker"
          disabled={false}
          forceEditMode={true}
          placeholder="View name"
          select={false}
          title="New & Open Tickets"
          update={[Function]}
        />
        <EmojiSelect
          className="emojiPicker"
          emoji={null}
          onEmojiClear={[Function]}
          onEmojiSelect={[Function]}
        />
        <img
          alt="close-icon"
          className="closeEditIcon"
          onClick={[Function]}
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should not render emoji if decoration.emoji is not a string 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="titleWrapper"
      >
        <EditableTitle
          className="title withEmojiPicker"
          disabled={false}
          forceEditMode={true}
          placeholder="View name"
          select={false}
          title="New & Open Tickets"
          update={[Function]}
        />
        <EmojiSelect
          className="emojiPicker"
          emoji={null}
          onEmojiClear={[Function]}
          onEmojiSelect={[Function]}
        />
        <img
          alt="close-icon"
          className="closeEditIcon"
          onClick={[Function]}
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header emoji picker .render() should render emoji if decoration.emoji is a string 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="titleWrapper"
      >
        <EditableTitle
          className="title withEmojiPicker"
          disabled={false}
          forceEditMode={true}
          placeholder="View name"
          select={false}
          title="New & Open Tickets"
          update={[Function]}
        />
        <EmojiSelect
          className="emojiPicker"
          emoji="foo"
          onEmojiClear={[Function]}
          onEmojiSelect={[Function]}
        />
        <img
          alt="close-icon"
          className="closeEditIcon"
          onClick={[Function]}
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header empty view 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="title mr-2 h-100 cursor-pointer"
        color="transparent"
        id="settings-view-button"
        onClick={[Function]}
      >
        <Memo(ViewName) />
        <i
          className="material-icons"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div
      className="d-flex"
    >
      <Search
        autoFocus={false}
        bindKey={true}
        className="headerSearch mr-2"
        disabled={false}
        forcedQuery=""
        location="undefined"
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={0}
        style={Object {}}
      />
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header search view 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="d-flex flex-grow"
    >
      <Search
        autoFocus={true}
        bindKey={true}
        className="headerSearch mr-2 isSearching flex-grow"
        disabled={false}
        forcedQuery="term1"
        location="7(s)"
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search tickets..."
        searchDebounceTime={0}
        style={Object {}}
      />
      <Link
        to="/app/tickets"
      >
        <i
          className="closeIcon material-icons d-none d-md-inline-block"
          id="leave-search-mode"
        >
          close
        </i>
        <Tooltip
          placement="top"
          target="leave-search-mode"
        >
          <b>
            Esc
          </b>
           Leave search mode
        </Tooltip>
      </Link>
    </div>
  </div>
</div>
`;

exports[`ViewTable::Header should render when view is in edit mode 1`] = `
<div
  className="component"
>
  <div
    className="d-flex flex-grow"
  >
    <div
      className="flex-grow mr-2 titleWrapper"
    >
      <div
        className="titleWrapper"
      >
        <EditableTitle
          className="title withEmojiPicker"
          disabled={false}
          forceEditMode={true}
          placeholder="View name"
          select={false}
          title="New & Open Tickets"
          update={[Function]}
        />
        <EmojiSelect
          className="emojiPicker"
          emoji={null}
          onEmojiClear={[Function]}
          onEmojiSelect={[Function]}
        />
        <img
          alt="close-icon"
          className="closeEditIcon"
          onClick={[Function]}
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
